--- a/royal-care-frontend/src/pages/LoginPage/LoginPage.module.css
+++ b/royal-care-frontend/src/pages/LoginPage/LoginPage.module.css
@@ -243,34 +243,6 @@
   z-index: 2;
 }
 
-.global-form-field-input[type="password"],
-.global-form-field-input[type="text"] {
-  padding-right: 36px !important;
-}
-
-.inputWithIcon {
-  position: relative;
-  padding-right: 40px !important;
-}
-
-.inputIconBtn {
-  position: absolute;
-  right: var(--spacing-xxs);
-  /* top: 50%; */
-  transform: translateY(-61.8%);
-  background: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-  color: var(--muted);
-  display: flex;
-  align-items: center;
-  z-index: 2;
-  height: 32px;
-  width: 32px;
-}
-
 .phoneInputWrapper {
   display: flex;
   align-items: center;
